- Fix wrong alignment caused by smaller icon.

--- a/packages/panels/src/components/notifications/Notification.module.css
+++ b/packages/panels/src/components/notifications/Notification.module.css
@@ -5,7 +5,7 @@
   background: var(--lhds-color-ui-50);
 
   .body {
-    padding-left: 72px;
+    padding-left: 64px;
     padding-right: 24px;
     padding-bottom: 16px;
   }
